--- a/docs/fluxusdoc.css
+++ b/docs/fluxusdoc.css
@@ -31,7 +31,8 @@ h1 { font-size: 20px; }
 c 
 {
 	color: #000088; 
-	font-size: 12px;  
+	font-size: 10px;  
+        font-family: monaco, monospace;
 }
 
 /* link */
@@ -54,3 +55,11 @@ a:active
 	color: green;
 }
 
+/* tables */
+th
+{
+	background-color: #cccccc;
+	color: black; 
+	font-family: courier-new, monospace;
+	font-size: 10px;  
+}
